--- a/VistasFarmacia/VistasFarmacia.csproj
+++ b/VistasFarmacia/VistasFarmacia.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Forms\FormProveedores.cs">
       <SubType>Form</SubType>
     </Compile>
