--- a/VistasFarmacia/Farmacia.csproj
+++ b/VistasFarmacia/Farmacia.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.2" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
