--- a/Farmacia/Farmacia.csproj
+++ b/Farmacia/Farmacia.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Presentacion\FormMarcas.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Presentacion\FormProveedores.cs">
       <SubType>Form</SubType>
     </Compile>
