--- a/Farmacia/Farmacia.csproj
+++ b/Farmacia/Farmacia.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.102.2" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="QuestPDF" Version="2024.3.10" />
   </ItemGroup>
 
   <ItemGroup>
@@ -47,6 +48,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
