--- a/Farmacia/Farmacia.csproj
+++ b/Farmacia/Farmacia.csproj
@@ -61,6 +61,9 @@
     <None Update="logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="logo_dark.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
